@@ -2137,6 +2137,7 @@ if rank == 0:
 
         uvfits_parms = None
         if save_to_uvfits:
+            PDB.set_trace()
             if save_formats['phase_center'] is None:
                 phase_center = simvis.pointing_center[0,:].reshape(1,-1)
                 phase_center_coords = simvis.pointing_coords
@@ -2155,7 +2156,9 @@ if rank == 0:
                 uvfits_ref_point = {'location': phase_center.reshape(1,-1), 'coords': 'radec'}
             else:
                 uvfits_ref_point = {'location': NP.asarray(save_formats['phase_center']).reshape(1,-1), 'coords': 'radec'}
-            uvfits_parms = {'ref_point': uvfits_ref_point, 'method': save_formats['uvfits_method']}
+            # Phase the visibilities to a phase reference point
+            simvis.rotate_visibilities(uvfits_ref_point)
+            uvfits_parms = {'ref_point': None, 'method': save_formats['uvfits_method']}
             if save_redundant:
                 simvis.duplicate_measurements(blgroups=blgroups)
                 consolidated_outfile = rootdir+project_dir+simid+sim_dir+'all-simvis'
